--- a/conf/machine/vusolo.conf
+++ b/conf/machine/vusolo.conf
@@ -83,13 +83,16 @@ UBINIZE_ARGS = "-m 2048 -p 128KiB"
 IMAGEDIR ?= "${MACHINE}"
 EXTRA_IMAGECMD_COMPAT = " --eraseblock=0x20000 -n -l "
 
-IMAGE_CMD_ubi_append = "; \
+IMAGE_CMD_ubi_prepend = " \
         cp ${IMAGE_ROOTFS}/boot/vmlinux.gz ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz; \
         rm -f ${IMAGE_ROOTFS}/boot/vmlinux.gz; \
         mkfs.jffs2 --root=${IMAGE_ROOTFS}/boot --faketime \
         --disable-compressor=lzo --compression-mode=size \
         --output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 \
-        ${EXTRA_IMAGECMD_COMPAT}; \
+        ${EXTRA_IMAGECMD_COMPAT}; rm -rf ${IMAGE_ROOTFS}/boot/*; \
+        "
+
+IMAGE_CMD_ubi_append = "; \
         mkdir -p ${DEPLOY_DIR_IMAGE}/vuplus/solo; \
         cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ubi ${DEPLOY_DIR_IMAGE}/vuplus/solo/root_cfe_auto.jffs2; \
         cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz ${DEPLOY_DIR_IMAGE}/vuplus/solo/kernel_cfe_auto.bin; \
