--- a/conf/machine/vuultimo.conf
+++ b/conf/machine/vuultimo.conf
@@ -111,15 +111,18 @@ UBINIZE_ARGS = "-m 2048 -p 128KiB"
 IMAGEDIR ?= "${MACHINE}"
 EXTRA_IMAGECMD_COMPAT = " --eraseblock=0x20000 -n -l "
 
-IMAGE_CMD_ubi_append = "; \
-	cp ${IMAGE_ROOTFS}/boot/vmlinux.gz ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz; \
-	cp ${IMAGE_ROOTFS}/boot/splash_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.splash_cfe_auto.bin; \
-	rm -f ${IMAGE_ROOTFS}/boot/vmlinux.gz; \
-	rm -f ${IMAGE_ROOTFS}/boot/splash_cfe_auto.bin; \
+IMAGE_CMD_ubi_prepend = " \
+        cp ${IMAGE_ROOTFS}/boot/vmlinux.gz ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz; \
+        cp ${IMAGE_ROOTFS}/boot/splash_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.splash_cfe_auto.bin; \
+        rm -f ${IMAGE_ROOTFS}/boot/vmlinux.gz; \
+        rm -f ${IMAGE_ROOTFS}/boot/splash_cfe_auto.bin; \
         mkfs.jffs2 --root=${IMAGE_ROOTFS}/boot --faketime \
         --disable-compressor=lzo --compression-mode=size \
         --output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 \
-        ${EXTRA_IMAGECMD_COMPAT}; \
+        ${EXTRA_IMAGECMD_COMPAT}; rm -rf ${IMAGE_ROOTFS}/boot/*; \
+        "
+
+IMAGE_CMD_ubi_append = "; \
         mkdir -p ${DEPLOY_DIR_IMAGE}/vuplus/ultimo; \
         cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ubi ${DEPLOY_DIR_IMAGE}/vuplus/ultimo/root_cfe_auto.jffs2; \
 	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz ${DEPLOY_DIR_IMAGE}/vuplus/ultimo/kernel_cfe_auto.bin; \
