--- a/recipes/linux/linux-vuuno-3.1.1/vuuno_defconfig
+++ b/recipes/linux/linux-vuuno-3.1.1/vuuno_defconfig
@@ -2547,7 +2547,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_TEST_KSTRTOX is not set
 CONFIG_EARLY_PRINTK=y
 CONFIG_CMDLINE_BOOL=y
-CONFIG_CMDLINE="boot -z -elf flash0.kernel: 'bmem=208M ubi.mtd=0 root=ubi0:rootfs rootfstype=ubifs rw'"
+CONFIG_CMDLINE="boot -z -elf flash0.kernel: 'bmem=208M ubi.mtd=0 root=ubi0:rootfs rootfstype=ubifs rw rootflags=sync'"
 CONFIG_CMDLINE_OVERRIDE=y
 # CONFIG_DEBUG_STACKOVERFLOW is not set
 # CONFIG_RUNTIME_DEBUG is not set
