--- a/recipes/linux/linux-vu7425-3.1.1/vu7425_defconfig
+++ b/recipes/linux/linux-vu7425-3.1.1/vu7425_defconfig
@@ -2348,7 +2348,7 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_BEFS_FS is not set
 # CONFIG_BFS_FS is not set
 # CONFIG_EFS_FS is not set
-CONFIG_JFFS2_FS=m
+CONFIG_JFFS2_FS=y
 CONFIG_JFFS2_FS_DEBUG=0
 CONFIG_JFFS2_FS_WRITEBUFFER=y
 # CONFIG_JFFS2_FS_WBUF_VERIFY is not set
@@ -2547,8 +2547,8 @@ CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_TEST_KSTRTOX is not set
 CONFIG_EARLY_PRINTK=y
 CONFIG_CMDLINE_BOOL=y
-CONFIG_CMDLINE=""
-# CONFIG_CMDLINE_OVERRIDE is not set
+CONFIG_CMDLINE="bmem=224M ubi.mtd=0 root=ubi0:rootfs rootfstype=ubifs rw rootflags=sync"
+CONFIG_CMDLINE_OVERRIDE=y
 # CONFIG_DEBUG_STACKOVERFLOW is not set
 # CONFIG_RUNTIME_DEBUG is not set
 
