--- a/conf/machine/vuduo2.conf
+++ b/conf/machine/vuduo2.conf
@@ -35,7 +35,7 @@ MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_2.6.18 = "\
         kernel-module-xfs \
 	"
 #MACHINE_ESSENTIAL_EXTRA_RDEPENDS_3.1.1 = "kernel vuplus-dvb-modules"
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS_3.1.1 = "kernel"
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS_3.1.1 = "kernel vuplus-dvb-modules"
 
 MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_3.1.1 = "\
 	kernel-module-ext2 \
@@ -105,7 +105,8 @@ IMAGE_CMD_jffs2 = " \
 
 
 UBI_VOLNAME = "rootfs"
-MKUBIFS_ARGS = "-m 2048 -e 126976 -c 4096 -F"
+#MKUBIFS_ARGS = "-m 2048 -e 126976 -c 4096 -F"
+MKUBIFS_ARGS = "-m 2048 -e 126976 -c 4096"
 UBINIZE_ARGS = "-m 2048 -p 128KiB"
 
 IMAGEDIR ?= "${MACHINE}"
