--- a/conf/machine/vusolo.conf
+++ b/conf/machine/vusolo.conf
@@ -87,8 +87,8 @@ IMAGEDIR ?= "${MACHINE}"
 EXTRA_IMAGECMD_COMPAT = " --eraseblock=0x20000 -n -l "
 
 IMAGE_CMD_ubi_prepend = " \
-        cp ${IMAGE_ROOTFS}/boot/vmlinux.gz ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz; \
-        rm -f ${IMAGE_ROOTFS}/boot/vmlinux.gz; \
+        cp ${IMAGE_ROOTFS}/tmp/vmlinux.gz ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz; \
+        rm -f ${IMAGE_ROOTFS}/tmp/vmlinux.gz; \
         mkfs.jffs2 --root=${IMAGE_ROOTFS}/boot --faketime \
         --disable-compressor=lzo --compression-mode=size \
         --output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 \
@@ -108,8 +108,8 @@ IMAGE_CMD_ubi_append = "; \
 
 EXTRA_IMAGECMD_jffs2 = " --eraseblock=0x20000 -n -l "
 IMAGE_CMD_jffs2 = " \
-        cp ${IMAGE_ROOTFS}/boot/vmlinux.gz ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz; \
-        rm -f ${IMAGE_ROOTFS}/boot/vmlinux.gz; \
+        cp ${IMAGE_ROOTFS}/tmp/vmlinux.gz ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz; \
+        rm -f ${IMAGE_ROOTFS}/tmp/vmlinux.gz; \
         mkfs.jffs2 --root=${IMAGE_ROOTFS}/boot --faketime \
         --disable-compressor=lzo --compression-mode=size \
        --output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 \
