--- a/conf/machine/vuduo2.conf
+++ b/conf/machine/vuduo2.conf
@@ -4,55 +4,28 @@
 
 TARGET_ARCH = "mipsel"
 
-PREFERRED_VERSION_linux-vuduo2 = "2.6.37"
+PREFERRED_VERSION_linux-vuduo2 = "3.3.8"
 PREFERRED_VERSION_linux-libc-headers = "2.6.31"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-${MACHINE}"
 
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "kernel vuplus-dvb-modules"
 
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS_2.6.18 = "kernel vuplus-dvb-modules \
-        kernel-module-isofs \
-        kernel-module-sr-mod    kernel-module-usb-storage \
-        kernel-module-cdrom \
-        kernel-module-msdos kernel-module-vfat kernel-module-fat \
-        kernel-module-libata kernel-module-ntfs kernel-module-sata-svw \
-        kernel-module-nls-iso8859-15 kernel-module-nls-cp850 \
-        kernel-module-nls-utf8 \
-        kernel-module-i2c-core kernel-module-i2c-dev kernel-module-firmware-class kernel-module-input kernel-module-evdev \
-        kernel-module-snd-pcm kernel-module-snd \
-	kernel-module-tun \
-	kernel-module-fb \
-	v4l-dvb-module-dvb-core \
-	kernel-module-usbhid \
-	kernel-module-mousedev \
-        "
-
-MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_2.6.18 = "\
-        kernel-module-cifs \
-        kernel-module-exportfs \
-        kernel-module-ext2 \
-        kernel-module-reiserfs \
-        kernel-module-xfs \
-	"
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS_2.6.37 = "kernel vuplus-dvb-modules"
-
-MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_2.6.37 = "\
+MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = "\
 	kernel-module-ext2 \
 	"
 
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS = ${@base_contains('PREFERRED_VERSION_linux-vuduo2', '2.6.18', '${MACHINE_ESSENTIAL_EXTRA_RDEPENDS_2.6.18}', '${MACHINE_ESSENTIAL_EXTRA_RDEPENDS_2.6.37}', d)}
-MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = ${@base_contains('PREFERRED_VERSION_linux-vuduo2', '2.6.18', '${MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_2.6.18}', '${MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_2.6.37}', d)}
+MACHINE_FEATURES += "rt3070-legacy"
+require conf/machine/include/vuplus-modules2.inc
 
-require conf/machine/include/vuplus-modules_2.6.37.inc
-
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vuduo2', '2.6.37', '${KERNEL_WIFI_MODULES}', '', d)}
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vuduo2', '2.6.37', '${KERNEL_DVB_MODULES}', '', d)}
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vuduo2', '2.6.37', '${KERNEL_3G_MODULES}', '', d)}
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vuduo2', '3.3.8', '${KERNEL_WIFI_MODULES}', '', d)}
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vuduo2', '3.3.8', '${KERNEL_DVB_MODULES}', '', d)}
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vuduo2', '3.3.8', '${KERNEL_3G_MODULES}', '', d)}
 
 
-PREFERRED_VERSION_wpa-supplicant = ${@base_contains('PREFERRED_VERSION_linux-vuduo2', '2.6.18', '0.5.10', '0.7.3', d)}
+PREFERRED_VERSION_wpa-supplicant = "0.7.3"
 
-IMAGE_FSTYPES = ${@base_contains('PREFERRED_VERSION_linux-vuduo2', '2.6.18', 'tar.bz2 jffs2', 'tar.bz2 ubi', d)}
+IMAGE_FSTYPES = "tar.bz2 ubi"
 
 TARGET_FPU = "hard"
 
@@ -77,40 +50,7 @@ MACHINE_FEATURES += "vuwlan"
 MACHINE_FEATURES += "enable-rc-kbd"
 MACHINE_FEATURES += "display-graphic-vfd"
 
-
-
-EXTRA_IMAGECMD_jffs2 = " --eraseblock=0x20000 -n -l "
-IMAGE_CMD_jffs2 = " \
-	cp ${IMAGE_ROOTFS}/tmp/vmlinux.gz ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz; \
-        cp ${IMAGE_ROOTFS}/boot/initrd_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.initrd_cfe_auto.bin; \
-        cp ${IMAGE_ROOTFS}/boot/splash_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.splash_cfe_auto.bin; \
-	rm -f ${IMAGE_ROOTFS}/tmp/vmlinux.gz; \
-        rm -f ${IMAGE_ROOTFS}/boot/initrd_cfe_auto.bin; \
-        rm -f ${IMAGE_ROOTFS}/boot/splash_cfe_auto.bin; \
-	mkfs.jffs2 --root=${IMAGE_ROOTFS}/boot --faketime \
-	--disable-compressor=lzo --compression-mode=size \
-       --output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 \
-       ${EXTRA_IMAGECMD}; rm -rf ${IMAGE_ROOTFS}/boot/*; \
-       rm -rf ${IMAGE_ROOTFS}/tmp/*; \
-       mkfs.jffs2 --root=${IMAGE_ROOTFS} \
-	--disable-compressor=lzo --compression-mode=size \
-       --output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 \
-       ${EXTRA_IMAGECMD}; \
-	mkdir -p ${DEPLOY_DIR_IMAGE}/vuplus/duo2; \
-	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 ${DEPLOY_DIR_IMAGE}/vuplus/duo2/root_cfe_auto.jffs2; \
-	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz ${DEPLOY_DIR_IMAGE}/vuplus/duo2/kernel_cfe_auto.bin; \
-	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 ${DEPLOY_DIR_IMAGE}/vuplus/duo2/boot_cfe_auto.jffs2; \
-	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.initrd_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/vuplus/duo2/initrd_cfe_auto.bin; \
-	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.splash_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/vuplus/duo2/splash_cfe_auto.bin; \
-	cd ${DEPLOY_DIR_IMAGE}; \
-	zip ${IMAGE_NAME}_usb.zip vuplus/duo2/*; \
-	rm -rf vuplus; \       
-"
-
-
-
 UBI_VOLNAME = "rootfs"
-#MKUBIFS_ARGS = "-m 2048 -e 126976 -c 4096 -F"
 MKUBIFS_ARGS = "-m 2048 -e 126976 -c 4096"
 UBINIZE_ARGS = "-m 2048 -p 128KiB"
 
@@ -126,13 +66,13 @@ IMAGE_CMD_ubi_prepend = " \
         rm -f ${IMAGE_ROOTFS}/boot/splash_cfe_auto.bin; \
         "
 
-#	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.splash_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/vuplus/duo2/splash_cfe_auto.bin; \
 
 IMAGE_CMD_ubi_append = "; \
         mkdir -p ${DEPLOY_DIR_IMAGE}/vuplus/duo2; \
         cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ubi ${DEPLOY_DIR_IMAGE}/vuplus/duo2/root_cfe_auto.bin; \
 	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz ${DEPLOY_DIR_IMAGE}/vuplus/duo2/kernel_cfe_auto.bin; \
 	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.initrd_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/vuplus/duo2/initrd_cfe_auto.bin; \
+	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.splash_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/vuplus/duo2/splash_cfe_auto.bin; \
 	touch ${DEPLOY_DIR_IMAGE}/vuplus/duo2/reboot.update; \
         cd ${DEPLOY_DIR_IMAGE}; \
 	zip ${IMAGE_NAME}_usb.zip vuplus/duo2/*; \
