--- a/conf/distro/vuplus.conf
+++ b/conf/distro/vuplus.conf
@@ -48,7 +48,7 @@ IMAGE_FSTYPES ?= "tar.bz2 ubi"
 
 #2.8
 #FEED_URIS += "official##http://archive.vuplus.com/openembedded/1.1/vuplus/${MACHINE}/feeds/stable"
-DISTRO_FEED_URI = "http://archive.vuplus.com/openembedded/${DISTRO_VERSION}/vuplus/feeds/stable"
+DISTRO_FEED_URI = "http://code.vuplus.com/packages/openembedded/${DISTRO_VERSION}/vuplus/feeds/stable"
 
 # If we're using an .ipk based rootfs, we want to have opkg-nogpg installed so postinst script can run
 IPKG_VARIANT = "opkg-nogpg"
